--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "preline": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-select-search": "^4.1.7",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
