--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-select-search": "^4.1.7",
+    "react-konva": "18.2.10",
+    "konva":"9.2.2",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
