--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@types/react-dom": "^18.2.13",
     "astro": "^3.3.0",
     "astro-icon": "^0.8.1",
+    "canvas-confetti": "^1.9.3",
     "flowbite": "^1.8.1",
+    "konva": "9.2.2",
     "preline": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-select-search": "^4.1.7",
     "react-konva": "18.2.10",
-    "konva":"9.2.2",
+    "react-select-search": "^4.1.7",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
